--- a/Skilled.html
+++ b/Skilled.html
@@ -149,11 +149,11 @@
 						- Fire Warden; <i style="font-size:small;">2016/17/18 -</i><br>
 						- 'Manager Left in Charge'; <i style="font-size:small;">2016/17 -</i><br>
 						- Negotiating and Business Practices; <i style="font-size:small;">2018 -</i><br><br>
-						- Office & Documentation proficient, such as Word, Excel, PDF, Open Office, etc.<br>
-						- Computer Software & Hardware literate. Comfortable using any software, and pc maintenance/builds.<br>
-						- Professional experience & competence in software development, Client & Server, using various IDEs.<br>
-						- Experience & familiarity in working with data/data-management, in line with Data Protection Act 2018.<br>
-						- User Journeys & the customer experience, including through CMS & CXM/CEM/CRM.<br>
+						- Office & Documentation proficient, such as Word, Excel, PDF, Open Office, etc. -<br>
+						- Computer Software & Hardware literate. Comfortable using any software, and pc maintenance/builds -<br>
+						- Professional experience & competence in software development, Client & Server, using various IDEs -<br>
+						- Experience & familiarity in working with data/data-management, in line with Data Protection Act 2018 -<br>
+						- User Journeys & the customer experience, including through CMS & CXM/CEM/CRM -<br>
 					</p>
 				</div>
 			</center>
