Add-Volunteering-&-Minor-Updates

--- a/Person.html
+++ b/Person.html
@@ -58,6 +58,7 @@
                         Explore Pages:
 							<li><a class="hover-anchor" href="Academia.html">Academic</a></li>
 							<li><a class="hover-anchor" href="Professional.html">Professional</a></li>
+							<li><a class="hover-anchor" href="Volunteer.html">Volunteer</a></li>
 							<li><a class="hover-anchor" href="Skilled.html">Skilled</a></li>
 					</ul>
 				</nav>
