--- a/Professional.html
+++ b/Professional.html
@@ -199,6 +199,7 @@
                         Explore Pages:
 							<li><a class="hover-anchor" href="Person.html">Person</a></li>
 							<li><a class="hover-anchor" href="Academia.html">Academic</a></li>
+							<li><a class="hover-anchor" href="Volunteer.html">Volunteer</a></li>
 							<li><a class="hover-anchor" href="Skilled.html">Skilled</a></li>
 					</ul>
 				</nav>
@@ -379,7 +380,7 @@
 				<div class="row">
 					<i class="fa fa-clock-o"></i>
 					<h2 style="color: black;">Wage History</h2>
-					<p style="color: rgb(24, 23, 23);">A timeline that illustrates career progression and ambition for growth. (Rounded Down)</p>
+					<p style="color: rgb(24, 23, 23);">A timeline that illustrates career progression and ambition for growth.</p>
 				</div>
 			</center><br>
 				
