--- a/Skilled.html
+++ b/Skilled.html
@@ -59,6 +59,7 @@
 							<li><a class="hover-anchor" href="Person.html">Person</a></li>
 							<li><a class="hover-anchor" href="Academia.html">Academic</a></li>
 							<li><a class="hover-anchor" href="Professional.html">Professional</a></li>
+							<li><a class="hover-anchor" href="Volunteer.html">Volunteer</a></li>
 					</ul>
 				</nav>
 			</div>
