--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 							<li><a class="hover-anchor" href="Person.html">Person</a></li>
 							<li><a class="hover-anchor" href="Academia.html">Academic</a></li>
 							<li><a class="hover-anchor" href="Professional.html">Professional</a></li>
+							<li><a class="hover-anchor" href="Volunteer.html">Volunteer</a></li>
 							<li><a class="hover-anchor" href="Skilled.html">Skilled</a></li>
 							<li><a class="hover-anchor" target="_blank" href="game/index.html">Play</a></li>
 							<li><a class="hover-anchor" target="_blank" href="organiser/index.html">Organize</a></li>
