--- a/Academia.html
+++ b/Academia.html
@@ -73,6 +73,7 @@
                         Explore Pages:
 							<li><a class="hover-anchor" href="Person.html">Person</a></li>
 							<li><a class="hover-anchor" href="Professional.html">Professional</a></li>
+							<li><a class="hover-anchor" href="Volunteer.html">Volunteer</a></li>
 							<li><a class="hover-anchor" href="Skilled.html">Skilled</a></li>
 					</ul>
 				</nav>
