Add-Volunteering-&-Minor-Updates

--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
 								is
 								are aspects that I consider the most important part of my own, or any, character profile, before any technical skills
 								or
-								projects. <a class="hover-anchor" style="font-weight: 800;" href="Person.html">(Learn more about my character profile by clicking here)</a><br><br>
-								<i><b>But please, don't just take my word, explore my site and see everything for
+								projects.<br>
+								<i><b>But don't just take my word, explore my site and see everything for
 										yourself!</b></i>
 							</p>
 						</center>
