--- a/Professional.html
+++ b/Professional.html
@@ -387,42 +387,52 @@
 			<div class="timeline" style="border:1.5px dashed #0b0161;">
 				<div class="container right">
 					<div class="content">
-						<h3 style="line-height: 4px;">2021</h3> £36500 / pa
+						<h3 style="line-height: 4px;">2022</h3> £44900  / yr
 					</div>
 				</div>
 				<div class="container left">
 					<div class="content">
-						<h3 style="line-height: 4px;">2020</h3> £34800 / pa
+						<h3 style="line-height: 4px;">2021</h3> £38900  / yr
 					</div>
 				</div>
 				<div class="container right">
 					<div class="content">
-						<h3 style="line-height: 4px;">2019</h3> £26400 / pa
+						<h3 style="line-height: 4px;">2021</h3> £36500  / yr
 					</div>
 				</div>
 				<div class="container left">
 					<div class="content">
-						<h3 style="line-height: 4px;">2018</h3> £25700 / pa
+						<h3 style="line-height: 4px;">2020</h3> £34800  / yr
 					</div>
 				</div>
 				<div class="container right">
 					<div class="content">
-						<h3>2017</h3> ~£7.90 / h
+						<h3 style="line-height: 4px;">2019</h3> £26400  / yr
 					</div>
 				</div>
 				<div class="container left">
 					<div class="content">
-						<h3>2016</h3> ~£15000 / pa
+						<h3 style="line-height: 4px;">2018</h3> £25700  / yr
 					</div>
 				</div>
 				<div class="container right">
 					<div class="content">
-						<h3>2015</h3> ~£6.30 / h
+						<h3>2017</h3> ~£7.90  / h
 					</div>
 				</div>
 				<div class="container left">
 					<div class="content">
-						<h3>2012</h3> ~£5.80 / h
+						<h3>2016</h3> ~£15000  / yr
+					</div>
+				</div>
+				<div class="container right">
+					<div class="content">
+						<h3>2015</h3> ~£6.30  / h
+					</div>
+				</div>
+				<div class="container left">
+					<div class="content">
+						<h3>2012</h3> ~£5.80  / h
 					</div>
 				</div>
 			</div><br><br>
