--- a/Professional.html
+++ b/Professional.html
@@ -385,6 +385,11 @@
 			</center><br>
 				
 			<div class="timeline" style="border:1.5px dashed #0b0161;">
+				<div class="container left">
+					<div class="content">
+						<h3 style="line-height: 4px;">2023</h3> £49600  / yr
+					</div>
+				</div>
 				<div class="container right">
 					<div class="content">
 						<h3 style="line-height: 4px;">2022</h3> £44900  / yr
